[gd_scene load_steps=12 format=3 uid="uid://ccxyuyh00xp4i"]

[ext_resource type="Script" uid="uid://d2s2q57n5i85b" path="res://scripts/Player.gd" id="1_p0vlq"]
[ext_resource type="PackedScene" uid="uid://dfbirtvy55yl2" path="res://scenes/Zones/HandZone.tscn" id="2_v6fml"]
[ext_resource type="PackedScene" uid="uid://oa6i65c2krj2" path="res://scenes/Zones/FieldZone.tscn" id="3_bruh7"]
[ext_resource type="PackedScene" uid="uid://1rjpj20hdvmu" path="res://scenes/Zones/DeckZone.tscn" id="4_6eyey"]
[ext_resource type="PackedScene" uid="uid://dujknjpx4m2cn" path="res://scenes/FieldPrefab.tscn" id="4_d3wef"]
[ext_resource type="PackedScene" uid="uid://vf3mjy3o3imc" path="res://scenes/Zones/MagicStoneDeckZone.tscn" id="5_d3wef"]
[ext_resource type="PackedScene" uid="uid://12jjbhsbg85m" path="res://scenes/Zones/GraveyardZone.tscn" id="6_o4126"]
[ext_resource type="PackedScene" uid="uid://crbvcru2efeug" path="res://scenes/Zones/RemovedZone.tscn" id="7_lkdrv"]
[ext_resource type="PackedScene" uid="uid://3gfwfhy2wpaf" path="res://scenes/Zones/SideboardZone.tscn" id="8_p7iby"]
[ext_resource type="PackedScene" uid="uid://d2u5rpwn44qdy" path="res://scenes/Zones/RulerZone.tscn" id="9_0rnld"]
[ext_resource type="Texture2D" uid="uid://yrgjqqlvcf5u" path="res://assets/table/playmat.PNG" id="10_6eyey"]

[node name="Player" type="Node2D"]
script = ExtResource("1_p0vlq")

[node name="DeckRequest" type="HTTPRequest" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="HandZone" parent="." instance=ExtResource("2_v6fml")]
position = Vector2(-256, 722)

[node name="ColorRect" type="ColorRect" parent="HandZone"]
offset_right = 480.0
offset_bottom = 670.0
scale = Vector2(0.25, 0.25)
color = Color(0.362829, 0.362829, 0.362829, 1)
metadata/_edit_use_anchors_ = true

[node name="FieldZone" parent="." instance=ExtResource("3_bruh7")]
position = Vector2(-1096, 72)
x = 18
y = 6
spacing = 13
field_prefab = ExtResource("4_d3wef")

[node name="ColorRect" type="ColorRect" parent="FieldZone"]
offset_right = 480.0
offset_bottom = 670.0
scale = Vector2(0.25, 0.25)
color = Color(0.364706, 0.364706, 0.364706, 0)
metadata/_edit_use_anchors_ = true

[node name="DeckZone" parent="." instance=ExtResource("4_6eyey")]
position = Vector2(1289, 240)

[node name="ColorRect" type="ColorRect" parent="DeckZone"]
offset_right = 480.0
offset_bottom = 670.0
scale = Vector2(0.25, 0.25)
color = Color(0.362829, 0.362829, 0.362829, 1)
metadata/_edit_use_anchors_ = true

[node name="MagicStoneDeckZone" parent="." instance=ExtResource("5_d3wef")]
position = Vector2(-1402, 683)

[node name="ColorRect" type="ColorRect" parent="MagicStoneDeckZone"]
offset_right = 480.0
offset_bottom = 670.0
scale = Vector2(0.25, 0.25)
color = Color(0.362829, 0.362829, 0.362829, 1)
metadata/_edit_use_anchors_ = true

[node name="GraveyardZone" parent="." instance=ExtResource("6_o4126")]
position = Vector2(1286, 466)

[node name="ColorRect" type="ColorRect" parent="GraveyardZone"]
offset_right = 480.0
offset_bottom = 670.0
scale = Vector2(0.25, 0.25)
color = Color(0.362829, 0.362829, 0.362829, 1)
metadata/_edit_use_anchors_ = true

[node name="RemovedZone" parent="." instance=ExtResource("7_lkdrv")]
position = Vector2(1286, 688)

[node name="ColorRect" type="ColorRect" parent="RemovedZone"]
offset_right = 480.0
offset_bottom = 670.0
scale = Vector2(0.25, 0.25)
color = Color(0.362829, 0.362829, 0.362829, 1)
metadata/_edit_use_anchors_ = true

[node name="SideboardZone" parent="." instance=ExtResource("8_p7iby")]
position = Vector2(-1397, 403)

[node name="ColorRect" type="ColorRect" parent="SideboardZone"]
offset_right = 480.0
offset_bottom = 670.0
scale = Vector2(0.25, 0.25)
color = Color(0.362829, 0.362829, 0.362829, 1)
metadata/_edit_use_anchors_ = true

[node name="RulerZone" parent="." instance=ExtResource("9_0rnld")]
position = Vector2(-1390, 71)

[node name="ColorRect" type="ColorRect" parent="RulerZone"]
offset_right = 480.0
offset_bottom = 670.0
scale = Vector2(0.25, 0.25)
color = Color(0.362829, 0.362829, 0.362829, 1)

[node name="TextureRect" type="TextureRect" parent="."]
visibility_layer = 2
z_index = -1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -1478.0
offset_bottom = 786.0
grow_horizontal = 2
scale = Vector2(2, 2)
mouse_filter = 2
texture = ExtResource("10_6eyey")
metadata/_edit_lock_ = true
